--- a/Word2Vec-web/public/partials/cloudWords.html
+++ b/Word2Vec-web/public/partials/cloudWords.html
@@ -1,15 +1,11 @@
-<div class="jumbotron">
-	<h1 class="text-center">
-		Bem-vindo ao Spark Word2Vec
-	</h1>
-</div>
-<div id="wordsCloud">
-   <word-cloud words="words" width="width" height="height"
-        padding="10" 
+<div id="wordsCloud" class="block">
+	Nuvem de palavras:
+   	<word-cloud words="words" width="width" height="height"
+    	padding="10" 
         rotate="rotate" 
         random="random" 
         use-tooltip="useTooltip" 
         use-transition="useTransition" 
         on-click="wordClicked">
-   </word-cloud>
+   	</word-cloud>
 </div>
