word cloud from spark, and post from stackoverflow

--- a/Word2Vec-web/public/partials/cloudWords.html
+++ b/Word2Vec-web/public/partials/cloudWords.html
@@ -1,4 +1,4 @@
-<div id="wordsCloud" class="block">
+<div id="wordsCloud" class="block" ng-show="words.length">
 	Nuvem de palavras:
    	<word-cloud words="words" width="width" height="height"
     	padding="10" 
